# trekroner-docs

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  environment.yml  pyproject.toml
QField_treregistreringsapp/: CHANGELOG.md
R_summary_stat/: baerum_summary_statistics.Rmd  bodo_summary_statistics.Rmd  kristiansand_summary_statistics.Rmd  oslo_summary_statistics.Rmd
R_summary_stat/R/: config.R  nina_plot.R  nina_theme.R
R_summary_stat/config/: catalog.yaml  parameters.yaml
Rmd/: baerum_summary_statistics.Rmd  bodo-sammendragsstatistikk.Rmd
docs/: make.bat  method_template_md.md
docs/doctrees/: env_setup.doctree  environment.pickle  frost_weather_data.doctree  index.doctree  kedro_geospatial.doctree  kedro_geospatial.pipelines.doctree  kedro_readme.doctree  kristiansand_summary_stat.doctree  modules.doctree  notebook_link.doctree  page_1.doctree  project_setup.doctree  sphinx_dev_info.doctree  summary.doctree  summary_en.doctree  summary_no.doctree  urban_climate.custom_datasets.doctree  urban_climate.doctree  urban_climate.pipelines.data_science.doctree  urban_climate.pipelines.doctree  urban_climate.pipelines.raster_processing.doctree  urban_climate.utils.doctree  urban_climate.utils.raster.doctree  urban_climate.utils.vector.doctree
docs/doctrees/ES_icons/: ES_icons.doctree
docs/doctrees/Rmd/: baerum_summary_stat.doctree  bodo_summary_stat.doctree  index.doctree  kristiansand_summary_stat.doctree  oslo_summary_stat.doctree
docs/doctrees/Rmd_kristiansand/: bodo_summary_stat.doctree  index.doctree  kristiansand_summary_stat.doctree
docs/doctrees/app_instructions/: agol.doctree  index.doctree  qfield.doctree
docs/doctrees/app_instruks/: agol_instruks.doctree  qfield_instruks.doctree
docs/html/: .buildinfo  env_setup.html  example.Rmd  frost_weather_data.html  genindex.html  index.html  index.rst  kedro_geospatial.html  kedro_geospatial.pipelines.html  kedro_readme.html  kristiansand_summary_stat.html  modules.html  notebook_link.html  objects.inv  page_1.html  project_setup.html  py-modindex.html  search.html  searchindex.js  sphinx_dev_info.html  summary.html  summary_en.html  summary_no.html  urban_climate.custom_datasets.html  urban_climate.html  urban_climate.pipelines.data_science.html  urban_climate.pipelines.html  urban_climate.pipelines.raster_processing.html  urban_climate.utils.html  urban_climate.utils.raster.html  urban_climate.utils.vector.html
docs/html/Rmd/: index.html  (+4 more)
docs/source/: conf.py  index.rst  urban_climate.pipelines.data_science.rst  urban_climate.pipelines.raster_processing.rst  urban_climate.utils.raster.rst
temp/: scatch.md
(+375 files in other folders)
