[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "trekroner-docs"
version = "0.1.0"
description = "Sphinx documentation for the Trekroner project."
authors = ["Willeke A'Campo (linux vdi) <willeke.acampo@nina.no>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
sphinx = "7.2.6"
sphinx-autodoc-typehints = "1.25.2"
sphinx-copybutton = "0.5.2"
sphinx-rtd-theme = "2.0.0"
sphinxcontrib-applehelp = "1.0.7"
sphinxcontrib-devhelp = "1.0.5"
sphinxcontrib-htmlhelp = "2.0.4"
sphinxcontrib-jquery = "4.1"
sphinxcontrib-jsmath = "1.0.1"
sphinxcontrib-qthelp = "1.0.6"
sphinx-book-theme = {git = "https://github.com/executablebooks/sphinx-book-theme.git", rev = "1ae499bac6b2d3472280cbc84cb1aff51fa156aa"}
sphinxcontrib-serializinghtml = "1.1.9"
nbsphinx = "^0.9.3"
myst-parser = "^2.0.0"
sphinx-material = "^0.0.36"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "^5.12.0"
ruff = "^0.0.286"
pyment = "^0.3.3"
pytest = "^7.4.0"

[tool.black]
# https://github.com/psf/black
line-length = 88
color = true
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | env
    | venv
)/
'''

[tool.isort]
# https://pycqa.github.io/isort/docs/configuration/black_compatibility.html
profile = "black"

[tool.ruff]
# https://beta.ruff.rs/docs/settings
fix = true
ignore = ["E501"]
exclude = [
    ".git",
    ".env",
    ".venv"
]
